namespace F1BettingApp.Domain.Enums
{
    public enum BetStatus
    {
        Pending,
        Won,
        Lost,
        Canceled
    }
}