namespace F1BettingApp.Domain.Enums;

public enum NotificationType
{
    BetPlaced,
    BetWon,
    BetLost,
    RaceResultProcessed,
    SystemMessage
}