namespace F1BettingGame.Models.Enums;

public enum RaceStatus
{
    Scheduled,
    Completed,
    Cancelled,
    Postponed
}
